--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "eslint-config-prettier": "^4.0.0",
     "eslint-plugin-cypress": "^2.2.0",
+    "eslint-plugin-mocha": "^5.3.0",
     "eslint-plugin-no-only-tests": "^2.1.0",
     "eslint-plugin-prettier": "^3.0.0",
     "eslint-plugin-react": "^7.12.4"
