--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "eslint-plugin-mocha": "^6.1.1",
     "eslint-plugin-no-only-tests": "^2.1.0",
     "eslint-plugin-prettier": "^3.0.0",
-    "eslint-plugin-react": "^7.12.4"
+    "eslint-plugin-react": "^7.12.4",
+    "eslint-plugin-react-hooks": "^2.0.1"
   },
   "peerDependencies": {
     "eslint": ">= 5"
