--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/BioRender-Team/eslint-config-biorender#readme",
   "dependencies": {
+    "@typescript-eslint/eslint-plugin": "^2.3.1",
+    "@typescript-eslint/parser": "^2.3.1",
     "eslint-config-prettier": "^6.3.0",
     "eslint-plugin-cypress": "^2.2.0",
     "eslint-plugin-mocha": "^6.1.1",
