--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "eslint-config-prettier": "^6.3.0",
     "eslint-plugin-cypress": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-mocha": "^6.1.1",
     "eslint-plugin-no-only-tests": "^2.1.0",
     "eslint-plugin-prettier": "^3.0.0",
