--- a/package.json
+++ b/package.json
@@ -17,15 +17,17 @@
   },
   "homepage": "https://github.com/BioRender-Team/eslint-config-biorender#readme",
   "dependencies": {
-    "eslint-config-prettier": "^6.3.0",
-    "eslint-plugin-cypress": "^2.2.0",
+    "@typescript-eslint/parser": "^2.6.0",
+    "eslint": "^6.6.0",
+    "eslint-config-prettier": "^6.5.0",
+    "eslint-plugin-cypress": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-mocha": "^6.1.1",
-    "eslint-plugin-no-only-tests": "^2.1.0",
-    "eslint-plugin-prettier": "^3.0.0",
-    "eslint-plugin-react": "^7.12.4"
+    "eslint-plugin-mocha": "^6.2.1",
+    "eslint-plugin-no-only-tests": "^2.3.1",
+    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-react": "^7.16.0"
   },
   "peerDependencies": {
-    "eslint": ">= 5"
+    "eslint": ">= 6"
   }
 }
