--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-config-biorender",
-  "version": "1.6.6",
+  "version": "1.6.7",
   "description": "Shareable ESLint config for BioRender",
   "main": "index.js",
   "scripts": {
@@ -25,7 +25,8 @@
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-no-only-tests": "^2.4.0",
     "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react": "^7.20.6"
+    "eslint-plugin-react": "^7.20.6",
+    "eslint-plugin-react-hooks": "^4.1.0"
   },
   "peerDependencies": {
     "eslint": ">= 7"
